--- a/platformio.ini
+++ b/platformio.ini
@@ -1060,6 +1060,10 @@ board_level = extra
 build_flags = 
 	${esp32_base.build_flags} -D HELTEC_V2_1 -I variants/heltec_v2.1
 	-DGPS_POWER_TOGGLE
+lib_deps =
+  ${esp32_base.lib_deps}
+  MajicDesigns/MD_MAX72XX
+  MajicDesigns/MD_Parola
 
 [env:bpi_picow_esp32_s3]
 extends = esp32s3_base
