working with some quirks

--- a/platformio.ini
+++ b/platformio.ini
@@ -1062,9 +1062,8 @@ build_flags =
 	-DGPS_POWER_TOGGLE
 lib_deps =
   ${esp32_base.lib_deps}
-  MajicDesigns/MD_MAX72XX
-  MajicDesigns/MD_Parola
-
+	adafruit/Adafruit EPD
+	
 [env:bpi_picow_esp32_s3]
 extends = esp32s3_base
 board = bpi_picow_esp32_s3
