initial working for tcall

--- a/platformio.ini
+++ b/platformio.ini
@@ -384,13 +384,13 @@ debug_tool = jlink
 
 [env:meshtastic-diy-v1]
 extends = esp32_base
-board = esp32doit-devkit-v1
+board = esp-wrover-kit
 board_level = extra
 build_flags = 
 	${esp32_base.build_flags}
 	-D DIY_V1
 	-D EBYTE_E22
-	-D OLED_RU
+	;-D OLED_RU
 	-I variants/diy/v1
 
 [env:meshtastic-diy-v1_1]
@@ -438,6 +438,29 @@ board_level = extra
 board = ttgo-lora32-v1
 build_flags = 
 	${esp32_base.build_flags} -D TLORA_V1_3 -I variants/tlora_v1_3
+
+[env:lilygo]
+extends = esp32_base
+board_level = extra
+board = esp-wrover-kit
+build_flags = 
+	${esp32_base.build_flags} -I variants/diy/v1
+	-D EPD_CS=5
+  	-D EPD_DC=0
+	-D SRAM_CS=25
+	-D SPI_MOSI=2
+	-D BAT_PIN=35
+	-D HAS_RADIO=0
+	-D HW_VENDOR=meshtastic_HardwareModel_UNSET
+	-Isrc/platform/portduino
+
+lib_deps= ${esp32_base.lib_deps}
+	MajicDesigns/MD_MAX72XX
+	MajicDesigns/MD_Parola
+	adafruit/Adafruit EPD
+
+
+
 
 [env:pico]
 extends = rp2040_base
@@ -1033,6 +1056,8 @@ board = ttgo-lora32-v21
 build_flags = 
 	${esp32_base.build_flags} -D TLORA_V2_1_16 -I variants/tlora_v2_1_16
 	-DGPS_POWER_TOGGLE
+	-D NEW_EPD
+	;-D OLD_EPD
 
 lib_deps =
   ${esp32_base.lib_deps}
