add upside_down flag

--- a/platformio.ini
+++ b/platformio.ini
@@ -1057,6 +1057,7 @@ build_flags =
 	${esp32_base.build_flags} -D TLORA_V2_1_16 -I variants/tlora_v2_1_16
 	-DGPS_POWER_TOGGLE
 	-D NEW_EPD
+	-D UPSIDE_DOWN
 	;-D OLD_EPD
 
 lib_deps =
