--- a/platformio.ini
+++ b/platformio.ini
@@ -864,6 +864,7 @@ board = ttgo-lora32-v1
 board_level = extra
 build_flags = 
 	${esp32_base.build_flags} -D TLORA_V2 -I variants/tlora_v2
+	-D UPSIDE_DOWN
 lib_deps =
   ${esp32_base.lib_deps}
   MajicDesigns/MD_MAX72XX
