--- a/platformio.ini
+++ b/platformio.ini
@@ -1032,8 +1032,11 @@ lib_deps = ${esp32s3_base.lib_deps}
 extends = esp32_base
 board = ttgo-lora32-v21
 build_flags = 
-	${esp32_base.build_flags} -D TLORA_V2_1_16 -I variants/tlora_v2_1_16
-	-DGPS_POWER_TOGGLE
+	${esp32_base.build_flags}
+	-D TLORA_V2_1_16
+	-I variants/tlora_v2_1_16
+	-D GPS_POWER_TOGGLE
+	-D UPSIDE_DOWN
 
 lib_deps =
   ${esp32_base.lib_deps}
