--- a/platformio.ini
+++ b/platformio.ini
@@ -439,7 +439,7 @@ board = ttgo-lora32-v1
 build_flags = 
 	${esp32_base.build_flags} -D TLORA_V1_3 -I variants/tlora_v1_3
 
-[env:lilygo]
+[env:lilygo-noradio]
 extends = esp32_base
 board_level = extra
 board = esp-wrover-kit
@@ -451,12 +451,13 @@ build_flags =
 	-D SPI_MOSI=2
 	-D BAT_PIN=35
 	-D HAS_RADIO=0
+	-D HAS_GPS=0
 	-D HW_VENDOR=meshtastic_HardwareModel_UNSET
 	-Isrc/platform/portduino
 
 lib_deps= ${esp32_base.lib_deps}
-	MajicDesigns/MD_MAX72XX
-	MajicDesigns/MD_Parola
+	; MajicDesigns/MD_MAX72XX
+	; MajicDesigns/MD_Parola
 	adafruit/Adafruit EPD
 
 
