--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,20 @@
   "trunk.enableWindows": true,
   "files.associations": {
     "complex": "cpp",
-    "*.tpp": "cpp"
+    "*.tpp": "cpp",
+    "__bit_reference": "cpp",
+    "__hash_table": "cpp",
+    "__split_buffer": "cpp",
+    "__tree": "cpp",
+    "array": "cpp",
+    "deque": "cpp",
+    "initializer_list": "cpp",
+    "list": "cpp",
+    "map": "cpp",
+    "string": "cpp",
+    "string_view": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp",
+    "vector": "cpp"
   }
 }
