--- a/platformio.ini
+++ b/platformio.ini
@@ -160,6 +160,22 @@ lib_ignore =
 	ESP32 BLE Arduino
 board_build.partitions = partition-table.csv
 
+[env:esp32-neomatrix]
+extends = esp32_base
+board = esp32doit-devkit-v1
+board_level = extra
+build_flags = ${esp32_base.build_flags}
+	-D DIY_V1
+  -D EBYTE_E22
+	-I variants/diy/neomatrix
+	;-D UPSIDE_DOWN
+	
+lib_deps =
+  ${esp32_base.lib_deps}
+  adafruit/Adafruit BusIO@^1.13.2
+  Adafruit NeoMatrix
+	Adafruit NeoPixel
+  	
 [esp32s2_base]
 extends = esp32_base
 build_src_filter = 
