--- a/platformio.ini
+++ b/platformio.ini
@@ -288,10 +288,10 @@ build_flags =
 lib_deps= ${esp32_base.lib_deps}
 	adafruit/Adafruit EPD
 
-[env:my-esp32s3-diy-oled]
+[env:tds3]
 board_level = extra
 extends = esp32s3_base
-board = my-esp32s3-diy-oled
+board = lilygo-t-display-s3
 board_build.arduino.memory_type = dio_opi
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
@@ -301,7 +301,8 @@ platform_packages =
 	tool-esptoolpy@^1.40500.0
 lib_deps = 
 	${esp32_base.lib_deps}
-	adafruit/Adafruit NeoPixel@^1.10.7
+  https://github.com/tavdog/TFT_eSPI_S3
+
 build_unflags = -DARDUINO_USB_MODE=1
 build_flags = 
 	${esp32_base.build_flags} -D PRIVATE_HW -I variants/my_esp32s3_diy_oled
