--- a/platformio.ini
+++ b/platformio.ini
@@ -297,6 +297,7 @@ board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
 upload_protocol = esptool
 upload_speed = 921600
+monitor_port = /dev/cu.usbmodem*
 platform_packages = 
 	tool-esptoolpy@^1.40500.0
 lib_deps = 
@@ -306,6 +307,8 @@ lib_deps =
 build_unflags = -DARDUINO_USB_MODE=1
 build_flags = 
 	${esp32_base.build_flags} -D PRIVATE_HW -I variants/my_esp32s3_diy_oled
+  ;-D HW_VENDOR=meshtastic_HardwareModel_UNSET
+	-Isrc/platform/portduino
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 	-DARDUINO_USB_MODE=0
