--- a/platformio.ini
+++ b/platformio.ini
@@ -307,11 +307,11 @@ lib_deps =
 build_unflags = -DARDUINO_USB_MODE=1
 build_flags = 
 	${esp32_base.build_flags} -D PRIVATE_HW -I variants/my_esp32s3_diy_oled
-	-D HW_VENDOR=meshtastic_HardwareModel_UNSET
 	-Isrc/platform/portduino
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 	-DARDUINO_USB_MODE=0
+	;-D HW_VENDOR=meshtastic_HardwareModel_UNSET
 
 [env:tlora-v1]
 extends = esp32_base
