--- a/variants/no-radio/platformio.ini
+++ b/variants/no-radio/platformio.ini
@@ -5,8 +5,10 @@ board = esp-wrover-kit
 build_flags = 
 	${esp32_base.build_flags} -I variants/no-radio/esp32-epd
 	-D HW_VENDOR=meshtastic_HardwareModel_UNSET
-	-Isrc/platform/portduino
-  
+
+build_src_filter = 
+  ${esp32_base.build_src_filter}
+  +<platform/portduino/SimRadio.cpp>
 
 lib_deps= ${esp32_base.lib_deps}
   adafruit/Adafruit GFX Library
