add SIMULATE_RADIO flag
use for when arduino board doesn't have a radio or you just want to not simulate lora with the SimRadio object.

--- a/variants/no-radio/platformio.ini
+++ b/variants/no-radio/platformio.ini
@@ -3,7 +3,8 @@ extends = esp32_base
 board_level = extra
 board = esp-wrover-kit
 build_flags = 
-	${esp32_base.build_flags} -I variants/no-radio/esp32-epd
+	${esp32_base.build_flags}
+	-I variants/no-radio/esp32-epd
 	-D HW_VENDOR=meshtastic_HardwareModel_UNSET
 
 build_src_filter = 
