add pins and env for featheresp32

--- a/variants/no-radio/platformio.ini
+++ b/variants/no-radio/platformio.ini
@@ -2,10 +2,30 @@
 extends = esp32_base
 board_level = extra
 board = esp-wrover-kit
+upload_port = /dev/cu.wch*
 build_flags = 
 	${esp32_base.build_flags}
 	-I variants/no-radio/esp32-epd
 	-D HW_VENDOR=meshtastic_HardwareModel_UNSET
+
+build_src_filter = 
+  ${esp32_base.build_src_filter}
+  +<platform/portduino/SimRadio.cpp>
+
+lib_deps= ${esp32_base.lib_deps}
+  adafruit/Adafruit GFX Library
+	adafruit/Adafruit EPD
+
+
+[env:featheresp32-noradio]
+extends = esp32_base
+board_level = extra
+board = featheresp32
+build_flags = 
+	${esp32_base.build_flags}
+	-I variants/no-radio/esp32-epd
+	-D HW_VENDOR=meshtastic_HardwareModel_UNSET
+	-D featheresp32
 
 build_src_filter = 
   ${esp32_base.build_src_filter}
