add lilygot5 support

--- a/variants/no-radio/platformio.ini
+++ b/variants/no-radio/platformio.ini
@@ -16,6 +16,25 @@ lib_deps= ${esp32_base.lib_deps}
   adafruit/Adafruit GFX Library
 	adafruit/Adafruit EPD
 
+[env:lilygot5-noradio]
+extends = esp32_base
+board_level = extra
+board = esp32dev
+upload_port = /dev/cu.wch*
+build_flags =
+	${esp32_base.build_flags}
+	-I variants/no-radio/esp32-epd
+	-D HW_VENDOR=meshtastic_HardwareModel_UNSET
+	-D LILYGOT5
+build_src_filter =
+  ${esp32_base.build_src_filter}
+  +<platform/portduino/SimRadio.cpp>
+
+lib_deps= ${esp32_base.lib_deps}
+	adafruit/Adafruit GFX Library
+	https://github.com/ZinggJM/GxEPD
+	; adafruit/Adafruit EPD
+	; https://github.com/tavdog/GxEPD
 
 [env:featheresp32-noradio]
 extends = esp32_base
