--- a/variants/no-radio/platformio.ini
+++ b/variants/no-radio/platformio.ini
@@ -53,3 +53,20 @@ build_src_filter =
 lib_deps= ${esp32_base.lib_deps}
   adafruit/Adafruit GFX Library
 	adafruit/Adafruit EPD
+
+[env:tds3long]
+board_level = extra
+platform = espressif32
+board = T-Display-Long
+framework = arduino
+
+build_flags = 
+	-I variants/no-radio/tds3-long/variant.h
+	-D HW_VENDOR=meshtastic_HardwareModel_UNSET
+	-D tds3long
+
+lib_deps=
+	TFT_eSPI
+
+build_src_filter = 
+  +<platform/portduino/SimRadio.cpp>
