--- a/variants/no-radio/platformio.ini
+++ b/variants/no-radio/platformio.ini
@@ -55,18 +55,22 @@ lib_deps= ${esp32_base.lib_deps}
 	adafruit/Adafruit EPD
 
 [env:tds3long]
+extends = esp32s3_base
 board_level = extra
 platform = espressif32
 board = T-Display-Long
 framework = arduino
 
 build_flags = 
+	${esp32_base.build_flags}
 	-I variants/no-radio/tds3-long/variant.h
 	-D HW_VENDOR=meshtastic_HardwareModel_UNSET
 	-D tds3long
 
 lib_deps=
+	${esp32_base.lib_deps}
 	TFT_eSPI
 
 build_src_filter = 
-  +<platform/portduino/SimRadio.cpp>
+	${esp32_base.build_src_filter}
+	+<platform/portduino/SimRadio.cpp>
