--- a/variants/station-g2/platformio.ini
+++ b/variants/station-g2/platformio.ini
@@ -8,6 +8,7 @@ upload_protocol = esptool
 upload_speed = 921600
 lib_deps =
   ${esp32s3_base.lib_deps}
+  TFT_eSPI
 build_unflags =
   ${esp32s3_base.build_unflags}
   -DARDUINO_USB_MODE=1
@@ -16,3 +17,7 @@ build_flags =
   -DBOARD_HAS_PSRAM 
   -DSTATION_G2
   -DARDUINO_USB_MODE=0
+
+build_src_filter = 
+  ${esp32_base.build_src_filter}
+  +<platform/portduino/SimRadio.cpp>
