--- a/variants/windytron-long/platformio.ini
+++ b/variants/windytron-long/platformio.ini
@@ -1,4 +1,4 @@
-[env:station-g2]
+[env:windytron-long]
 extends = esp32s3_base
 board = station-g2
 board_check = true
@@ -13,7 +13,7 @@ build_unflags =
   ${esp32s3_base.build_unflags}
   -DARDUINO_USB_MODE=1
 build_flags = 
-  ${esp32s3_base.build_flags} -D STATION_G2 -I variants/station-g2
+  ${esp32s3_base.build_flags} -D STATION_G2 -I variants/windytron-long
   -DBOARD_HAS_PSRAM 
   -DSTATION_G2
   -DARDUINO_USB_MODE=0
