delete broken tds3long env/variant

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,7 +2,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = tds3long
+default_envs = windytron-long
 
 extra_configs =
 	arch/*/*.ini
